@@ -1,3 +1,4 @@
+name: Build
 on: [push]
 
 jobs:
