@@ -1,39 +1,0 @@
-# From https://github.com/DanySK/Gravis-CI
-
-language: bash
-dist: xenial
-os:
-  - linux
-
-env:
-  global:
-    - GRAVIS="https://raw.githubusercontent.com/DanySK/Gravis-CI/master/"
-
-  matrix:
-    # List any JDK you want to build your software with.
-    # You can see the list of supported environments by installing Jabba and using ls-remote:
-    # https://github.com/shyiko/jabba#usage
-    - JDK="adopt@1.8."
-    - JDK="amazon-corretto@1.8."
-    - JDK="openjdk@1.9."
-    - JDK="openjdk@1.11."
-    - JDK="openjdk@1.12."
-    - JDK="openjdk@1.13."
-
-cache:
-  directories:
-    # Avoid re-downloading the JDK every time
-    - $HOME/.jabba/
-    - $HOME/.m2/
-
-before_install:
-  # Sets up the Java environment
-  - curl "${GRAVIS}.install-jdk-travis.sh" --output .install-jdk-travis.sh
-  # Get maven 3.1.1
-  - "wget http://apache.mirror.iphh.net/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.tar.gz && tar xfz apache-maven-3.1.1-bin.tar.gz && sudo mv apache-maven-3.1.1 /usr/local/maven-3.1.1 && sudo rm -f /usr/local/maven && sudo ln -s /usr/local/maven-3.1.1 /usr/local/maven"
-
-before_script:
-  - bash .install-jdk-travis.sh
-
-script:
-  - /usr/local/maven/bin/mvn verify -B
